--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1> Amelia Collections</h1>
         <div class="headertext">
 
-            <p>panier</p>
+            <p>Panier</p>
         </div>
     </header>
 
@@ -30,9 +30,9 @@
             <li><a href="#femme">Femme</a></li>
             <li><a href="#homme">Homme</a></li>
             <li><a href="#solde">Solde</a></li>
-            <li><a href="index2.html#contact">contact</a></li>
+            <li><a href="index2.html#contact">Contact</a></li>
         </ul>
-        <button> login</button>
+        <button> <a href="index3.html" target="_blank">Login</a> </button>
     </nav>
 
     <section id="contenair">
@@ -40,36 +40,64 @@
             <div class="produit">
                 <figure>
                     <img src="femmes/imgf1.png" alt="image femme">
-
-                    <figcaption>Veste automne <br> 250 €</figcaption>
-
+                    <figcaption>Veste Automne</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1 ">
+                            <a href="#">250 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure>
                     <img src="femmes/imgf2.png" alt="image femme avec monteau rouge">
-                    <figcaption>Blaser noir <br> 300 €</figcaption>
+                    <figcaption>Blaser noir</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#">300 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
 
                 </figure>
                 <figure>
                     <img src="femmes/imgf3.png" alt="monteau">
 
-                    <figcaption>Nouveau <br><br>400 €</figcaption>
+                    <figcaption>Nouveau</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1" id="buttonLeftMid">
+                            <a href="#">400 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
             </div>
             <div class="produit">
                 <figure>
                     <img src="femmes/imgf4.png" alt="monteau rouge pour femme">
 
-                    <figcaption>Jupe noir<br>140 €</figcaption>
+                    <figcaption>Jupe noir</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1" id="buttonLeftMid">
+                            <a href="#">140 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure>
                     <img src="femmes/imgf6.png" alt="monteau rouge pour femme">
-                    <figcaption>Monteau rouge<br>450 €</figcaption>
+                    <figcaption>Monteau rouge</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#">450 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure>
 
                     <img src="femmes/imgf5.png" alt="monteau maron pour femme">
 
-                    <figcaption>Comfy collection<br>450 €</figcaption>
+                    <figcaption>Comfy collection</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1" id="buttonRightMid">
+                            <a href="#">450 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
 
             </div>
@@ -80,23 +108,43 @@
                 <figure>
                     <img src="femmes/imgh7.png" alt="homme avec un pull">
 
-                    <figcaption>T-shirt blanc<br>70 €</figcaption>
+                    <figcaption>T-shirt blanc</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#">70 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure>
                     <img src="femmes/imgh8.png" alt="pull noir en maille">
-                    <figcaption>Pull noir en maille<br>160 €</figcaption>
+                    <figcaption>Pull noir en maille</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#">160 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
             </div>
             <div class="produit">
                 <figure>
                     <img src="femmes/imgh9.png" alt="homme avec une pull" class="pull">
 
-                    <figcaption>Pull à capuche<br>130 €</figcaption>
+                    <figcaption>Pull à capuche</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#">130 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure>
                     <img src="femmes/imgh10.png" alt="homme avec une Perfecto">
 
-                    <figcaption>Perfecto<br>420 €</figcaption>
+                    <figcaption>Perfecto</figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#">420 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
             </div>
 
@@ -106,26 +154,57 @@
             <div class="produit1 produit relative">
                 <figure>
                     <img src="soldes/img1.png" alt="image femme">
-                    <figcaption>Blaser noir <br> <span>350 €</span> <span class="gold"> 175 € </span> <span class="absolute"> -50% </span> </figcaption>
+                    <figcaption>Blaser noir<span class="absolute"> -50%</span></figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#"><span>350 €</span><span class="gold"> 175 €</span></a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure>
                     <img src="soldes/img2.png" alt="image femme">
-                    <figcaption> Pull en Cachemir maron <br><span>150 € </span><span class="gold">90 €</span> <span class="absolute1"> -40%</span></figcaption>
+                    <figcaption> Pull en Cachemir maron<span class="absolute1"> -40%</span></figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#"><span>150 € </span><span class="gold">90 €</span></a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure><img src="soldes/img3.png" alt="image femme">
-                    <figcaption>Trench <br> <span>230 €</span><span class="gold"> 138 € </span> <span class="absolute2"> -40% </span></figcaption>
+                    <figcaption>Trench<span class="absolute2">
+                            -40% </span></figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#"><span>230 €</span><span class="gold"> 138 € </span> </a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
             </div>
             <div class="produit relative">
                 <figure><img src="soldes/img4.png" alt="image homme">
-                    <figcaption> Monteau <br> <span>450 €</span> <span class="gold">225 €
-                    </span> <span class="absolute"> -50%</span></figcaption>
+                    <figcaption> Manteau<span class="absolute"> -50%</span></figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#"><span>450 €</span> <span class="gold">225 €
+                            </span></a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure><img src="soldes/img5.png" alt="image homme">
-                    <figcaption> Sweat noir <br> <span>85 € </span> <span class="gold">42.5 €</span> <span class="absolute1"> -50%</span> </figcaption>
+                    <figcaption> Sweat noir<span class="absolute1"> -50%</span> </figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#"><span>85 € </span> <span class="gold">42.5 €</span></a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
                 <figure> <img src="soldes/img6.png" alt="image homme">
-                    <figcaption>Chemise noir <br> </span><span>150 €</span> <span class="gold">105 €</span> <span class="absolute2"> -30% </span></figcaption>
+                    <figcaption>Chemise noir<span class="absolute2"> -30% </span></figcaption>
+                    <div class="content animated fadeInLeft">
+                        <div class="button1">
+                            <a href="#"><span>150 €</span> <span class="gold">105 €</span></a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
+                        </div>
+                    </div>
                 </figure>
             </div>
         </section>
