--- a/index2.html
+++ b/index2.html
@@ -17,6 +17,10 @@
     <header>
 
         <h1> Amelia Collections</h1>
+        <div class="headertext">
+
+            <p>Panier</p>
+        </div>
     </header>
 
     <nav id="main">
@@ -28,10 +32,9 @@
             <li><a href="index.html#femme" target=" _blank">Femme</a></li>
             <li><a href="index.html#homme" target=" _blank">Homme</a></li>
             <li><a href="index.html#solde" target=" _blank">Solde</a></li>
-            <li><a href="index.html#contact" target=" _blank">contact</a></li>
+            <li><a href="index.html#contact" target=" _blank">Contact</a></li>
         </ul>
-        <button> login</button>
-
+        <button> <a href="index3.html" target="_blank">Login</a> </button>
 
     </nav>
 
