--- a/index3.html
+++ b/index3.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>collection amelia</title>
-    <link rel="stylesheet" href="index2.css">
+    <link rel="stylesheet" href="index3.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
@@ -16,31 +16,34 @@
     <main>
         <div class="menu">
             <div class="marque">
-                <p>Amelia collection</p>
+                <p>Amelia collections</p>
                 <a href="index2.html" target="_blank"><img src="images/_logo.png" alt="le logo de la collection"></a>
             </div>
 
-
-            <a href="" class="defaultbutton greenbutton"><i class="fas fa-search"></i></a>
+            <div class="recherche">
+                <a href="" class="defaultbutton greenbutton"><i class="fas fa-search"></i></a>
+                <p>Panier</p>
+            </div>
         </div>
+        <div class="contact">
+            <h2>SE CONNECTER</h2>
+            <p>*CHAMPS OBLIGATOIRES</p>
+            <input type="email" name="email" placeholder=" email">
+            <hr>
+            <div class="motdepasse">
+                <p>Se souvenir de moi</p>
+                <P>Mot de passe oublié? <br> Active mon compte </P>
 
-        <h1>SE CONNECTER</h1>
-        <p>*CHAMPS OBLIGATOIRES</p>
-        <input type="email" name="email" placeholder=" email">
-        <hr>
-        <div class="motdepasse">
-            <p>Se souvenir de moi</p>
-            <P>Mot de passe oublié? <br> Active mon compte </P>
+            </div>
+            <p class="para">suivant</p>
+            <h2>CREÉR UN COMPTE</h2>
+            <ul>
+                <li>Passer vos commandes plus rapidement</li>
+                <li>Renoyez les details de vos commandes</li>
 
+            </ul>
+            <p>créer un compte</p>
         </div>
-        <p>suivant</p>
-        <h1>CREÉR UN COMPTE</h1>
-        <ul>
-            <li>Passer vos commandes plus rapidement</li>
-            <li>Renoyez les details de vos commandes</li>
-
-        </ul>
-        <p>créer un compte</p>
     </main>
 </body>
 
