--- a/index2.html
+++ b/index2.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 
 <head>
     <meta charset="UTF-8">
@@ -16,10 +16,10 @@
 
     <header>
 
-        <h1> Amelia Collections</h1>
+        <h1> Amelia <br> Collections</h1>
         <div class="headertext">
 
-            <p>Panier</p>
+            <a href="#panier" class="panier"> <img src="images/panier2.svg" alt="image panier"> Panier</a>
         </div>
     </header>
 
@@ -29,12 +29,12 @@
                 <a href="index.html" target="_blank"><img src="images/_logo.png" alt="le logo de la collection"></a>
 
             </li>
-            <li><a href="index.html#femme" target=" _blank">Femme</a></li>
-            <li><a href="index.html#homme" target=" _blank">Homme</a></li>
-            <li><a href="index.html#solde" target=" _blank">Solde</a></li>
-            <li><a href="index.html#contact" target=" _blank">Contact</a></li>
+            <li><a href="index.html#Femme" target=" _blank">Femme</a></li>
+            <li><a href="index.html#Homme" target=" _blank">Homme</a></li>
+            <li><a href="index.html#Solde" target=" _blank">Solde</a></li>
+            <li><a href="index.html#Contact" target=" _blank">Contact</a></li>
         </ul>
-        <button> <a href="index3.html" target="_blank">Login</a> </button>
+        <button aria-label="connectez vous"> <a href="index3.html" target="_blank">Login</a> </button>
 
     </nav>
 
@@ -45,15 +45,15 @@
     <section id="entreprise" class="site-wrap">
 
 
-        <h1>Amelia Collection</h1>
+        <h1>Amelia Collections</h1>
 
         <p>Amelia Collection est fondée par le discret irano-américain Filmon Seare en 2006, à Montrueil City. Après cette boutique à Pouet, celui-ci créé une chaine de magasins commercialisant du « clubwear » économique. <br> Sept ans plus tard, Filmon
             Seare remarquant que les mêmes produits que les siens sont commercialisés en ligne, lance son propre site internet. Celui-ci rencontre rapidement le succès ; dès le départ il fait d'Instagram son outil central de communication, imposant le
-            hashtag #NovaBabes, sans utiliser la publicité traditionnelle3 ni fait de défilé. « Nova Babes » devient le surnom des clientes postant des images d'elles habillées en Amelia Collection3. Avec plusieurs millions d'abonnés de nos joursn 2,
-            dont plusieurs milliers d'influenceurs, l'exposition sur la toile est supérieure à H&M et Zara réunis mais également aux marques de luxe comme Versace, Givenchy, Gucci, Louis Vuitton ou Chanel, avec plusieurs milliers de publication chaque
-            mois, et même plusieurs chaque heure, frôlant la saturation6. En 2017 puis 2018, Amelia Collection est la marque de mode la plus recherchée sur Google. L'entreprise a également investi de domaine des mèmes comme canal de communication décalé
-            et faisant rire. <br> Les stylistes créés pratiquement un millier de nouveau modèle chaque semaine2 et le chiffre d'affaires atteind une progression de 600 % en 2017. <br> L'entreprise lance en 2016 une ligne « grandes tailles » : Amelia Collection
-            Curve, puis dispose également depuis juin 2018 d'un gamme pour les hommes ainsi que, l'année suivante, d'une ligne de jeans5. En parallèle, Amelia Collection annonce le projet d'une ligne de cosmétiques. La marque collabore parfois avec des
+            hashtag #NovaBabes, sans utiliser la publicité traditionnelle ni fait de défilé. « Nova Babes » devient le surnom des clientes postant des images d'elles habillées en Amelia Collections. Avec plusieurs millions d'abonnés de nos jours. dont
+            plusieurs milliers d'influenceurs, l'exposition sur la toile est supérieure à H&M et Zara réunis mais également aux marques de luxe comme Versace, Givenchy, Gucci, Louis Vuitton ou Chanel, avec plusieurs milliers de publication chaque mois,
+            et même plusieurs chaque heure, frôlant la saturation. En 2017 puis 2018, Amelia Collections est la marque de mode la plus recherchée sur Google. L'entreprise a également investi de domaine des mèmes comme canal de communication décalé et
+            faisant rire. <br> Les stylistes créés pratiquement un millier de nouveau modèle chaque semaine2 et le chiffre d'affaires atteind une progression de 600 % en 2017. <br> L'entreprise lance en 2016 une ligne « grandes tailles » : Amelia Collections
+            Curve, puis dispose également depuis juin 2018 d'un gamme pour les hommes ainsi que, l'année suivante, d'une ligne de jeans5. En parallèle, Amelia Collections annonce le projet d'une ligne de cosmétiques. La marque collabore parfois avec des
             artistes, comme la collection capsule avec Cardi B fin 2018, expérience qu'elle réitère en mai de l'année suivante.
         </p>
 
@@ -92,31 +92,31 @@
         </div>
     </section>
 
-    <section id="contact">
+    <section id="Contact">
         <h1> Pour nous contacter veuillez remplir ce documents </h1>
         <p class="para">
             Merci d'avoir pris le temps de nous aider à améliorer la plateforme</p>
         <form id="continer">
-            <label>Name</label>
-            <input type="text" name="name" placeholder=" Name">
-            <label>Second Name</label>
-            <input type="text" name="second name" placeholder="Second Name">
-            <label>Age</label>
-            <input type="Age" name="Age" placeholder="Age">
-            <label>Pasword</label>
-            <input type="pasword" name="pasword" placeholder="pasword">
-            <label>email</label>
-            <input type="email" name="email" placeholder=" email">
+            <label aria-label="écrire le name" for="name">Nom <span>(pas de nom composé)</span></label>
+            <input aria-label="écrire le name" aria-describedby="name" pattern="[a-z,A-Z]{1,30}" type="text" id="name" name="name" placeholder=" Nom">
+            <label aria-label="écrire le second name" for="second">Prénom <span>(pas de prénom composé)</span></label>
+            <input aria-label="écrire le second name" pattern="[a-z,A-Z]{1,30}" type="text" aria-describedby="second" id="second" name="second name" placeholder="Prénom">
+            <label aria-label="écrire l'age" for="age">Age <span>(en chiffre)</span></label>
+            <input aria-label="écrire l'age" type="number" id="age" aria-describedby="age" name="Age" placeholder="Age" min="10" max="100">
+            <label aria-label="écrire le mot de passe" for="pasword">Mot de passe</label>
+            <input aria-label="écrire le mot de passe" type="password" minlength="8" required inputmode="numeric" aria-describedby="pasword" id="pasword" name="pasword" placeholder="Mot de passe">
+            <label aria-label="écrire l'émail" for="email">Émail</label>
+            <input aria-label="écrire l'émail" type="email" aria-describedby="email" id="email" name="email" placeholder="sophie@example.com">
 
             <p>
                 Tout commentaires ou suggestions ?
             </p>
-            <input class="coment" type="text" name=" text" placeholder="Entrez le texte">
-            <p>
-
-            </p>
-            <input type="submit" name="submit" value="submit">
-
+            <div id="textcomment">
+                <input aria-label="entrez le texte" aria-describedby="textcomment" class="coment" type="text" name=" text" placeholder="Entrez le texte">
+            </div>
+            <div id="submit">
+                <input aria-label="entrez le texte" aria-describedby="submit" type="submit" name="submit" value="Envoyer">
+            </div>
 
         </form>
 
@@ -135,9 +135,9 @@
         <div class="liensutiles">
             <h3 id="shopfooter">Shop</h3>
             <ul>
-                <li><a href="index.html#femme">Femme</a></li>
-                <li><a href="index.html#homme">Homme</a></li>
-                <li><a href="index.html#solde">Soldes</a></li>
+                <li><a href="index.html#Femme">Femme</a></li>
+                <li><a href="index.html#Homme">Homme</a></li>
+                <li><a href="index.html#Solde">Soldes</a></li>
             </ul>
         </div>
         <div class="liensutiles">
@@ -153,7 +153,7 @@
             <ul>
                 <li><a href="#equipe">L'équipe</a></li>
                 <li><a href="#entreprise">L'entreprise</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#Contact">Contact</a></li>
             </ul>
         </div>
 
@@ -166,6 +166,7 @@
 
 
     <script src="index2.js"></script>
+    <script src="index1.js"></script>
 </body>
 
 </html>
