--- a/index.html
+++ b/index.html
@@ -18,21 +18,21 @@
         <h1> Amelia Collections</h1>
         <div class="headertext">
 
-            <a href="#panier" class="panier"> <img src="images/panier2.svg" alt="image panier"> Panier</a>
+            <a href="#panier" class="panier"> <img src="images/panier2.svg" alt="image panier" aria-label="le panier"> Panier</a>
         </div>
     </header>
 
     <nav id="main">
         <ul>
             <li class="logo">
-                <a href="index2.html" target="_blank"><img src="images/_logo.png" alt="le logo de la collection"></a>
+                <a href="index2.html" target="_blank" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)"><img src="images/_logo.png" alt="le logo de la collection"></a>
             </li>
             <li><a href="#Femme">Femme</a></li>
             <li><a href="#Homme">Homme</a></li>
             <li><a href="#Solde">Solde</a></li>
-            <li><a href="index2.html#Contact">Contact</a></li>
+            <li><a href="index2.html#Contact" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)">Contact</a></li>
         </ul>
-        <button aria-label="connectez vous"> <a href="index3.html" target="_blank">Login</a> </button>
+        <button aria-label="connectez vous"> <a href="index3.html" target="_blank" rel="noopener noreferrer"title="fiche contact(nouvelle fenêtre)">Login</a> </button>
     </nav>
     <!-- section produits femmes -->
     <section id="contenair">
@@ -212,10 +212,10 @@
         <footer>
             <div class="mainfoot">
                 <div class="icons">
-                    <a href="https://www.instagram.com/accounts/login/" target=" _blank"><i class="fab fa-instagram"></i></a>
-                    <a href="https://www.facebook.com/" target=" _blank"><i class="fab fa-facebook-square"></i></a>
-                    <a href="https://twitter.com/?lang=fr" target=" _blank"><i class="fab fa-twitter"></i></a>
-                    <a href="https://www.linkedin.com/" target=" _blank"><i class="fab fa-linkedin"></i></a>
+                    <a href="https://www.instagram.com/accounts/login/" target=" _blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.facebook.com/" target=" _blank" rel="noopener noreferrer"><i class="fab fa-facebook-square"></i></a>
+                    <a href="https://twitter.com/?lang=fr" target=" _blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+                    <a href="https://www.linkedin.com/" target=" _blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
 
                 </div>
                 <div class="liensutiles">
@@ -237,9 +237,9 @@
                 <div class="liensutiles">
                     <h3 id="liensutilesfooter">Liens utiles</h3>
                     <ul>
-                        <li><a href="index2.html#equipe" target=" _blank">L'équipe</a></li>
-                        <li><a href="index2.html#entreprise" target=" _blank">L'entreprise</a></li>
-                        <li><a href="index2.html#Contact" target=" _blank">Contact</a></li>
+                        <li><a href="index2.html#equipe" target=" _blank" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)">L'équipe</a></li>
+                        <li><a href="index2.html#entreprise" target=" _blank" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)">L'entreprise</a></li>
+                        <li><a href="index2.html#Contact" target=" _blank" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)">Contact</a></li>
                     </ul>
                 </div>
 
