--- a/index2.html
+++ b/index2.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>collection amelia</title>
+    <title>collection amelia "nouvelle fenêtre"</title>
     <link rel="stylesheet" href="index2.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700&display=swap" rel="stylesheet">
@@ -19,22 +19,22 @@
         <h1> Amelia <br> Collections</h1>
         <div class="headertext">
 
-            <a href="#panier" class="panier"> <img src="images/panier2.svg" alt="image panier"> Panier</a>
+            <a href="#panier" class="panier"> <img src="images/panier2.svg" alt="image panier" aria-label="le panier"> Panier</a>
         </div>
     </header>
 
     <nav id="main">
         <ul>
             <li class="logo">
-                <a href="index.html" target="_blank"><img src="images/_logo.png" alt="le logo de la collection"></a>
+                <a href="index.html" target="_blank" rel="noopener noreferrer"><img src="images/_logo.png" alt="le logo de la collection" aria-label="logo de la collection"></a>
 
             </li>
-            <li><a href="index.html#Femme" target=" _blank">Femme</a></li>
-            <li><a href="index.html#Homme" target=" _blank">Homme</a></li>
-            <li><a href="index.html#Solde" target=" _blank">Solde</a></li>
-            <li><a href="index.html#Contact" target=" _blank">Contact</a></li>
+            <li><a href="index.html#Femme" target=" _blank" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Femme</a></li>
+            <li><a href="index.html#Homme" target=" _blank" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Homme</a></li>
+            <li><a href="index.html#Solde" target=" _blank" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Solde</a></li>
+            <li><a href="index.html#Contact" target=" _blank" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Contact</a></li>
         </ul>
-        <button aria-label="connectez vous"> <a href="index3.html" target="_blank">Login</a> </button>
+        <button aria-label="connectez vous"> <a href="index3.html" target="_blank"rel="noopener noreferrer"title="page d'inscription (nouvelle fenêtre)">Login</a> </button>
 
     </nav>
 
@@ -126,18 +126,18 @@
     <footer class="mainfoot">
 
         <div class="icons">
-            <a href="https://www.instagram.com/accounts/login/" target=" _blank"><i class="fab fa-instagram"></i></a>
-            <a href="https://www.facebook.com/" target=" _blank"><i class="fab fa-facebook-square"></i></a>
-            <a href="https://twitter.com/?lang=fr" target=" _blank"><i class="fab fa-twitter"></i></a>
-            <a href="https://www.linkedin.com/" target=" _blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://www.instagram.com/accounts/login/" target=" _blank" rel="noopener noreferrer"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/" target=" _blank" rel="noopener noreferrer"><i class="fab fa-facebook-square"></i></a>
+            <a href="https://twitter.com/?lang=fr" target=" _blank" rel="noopener noreferrer"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.linkedin.com/" target=" _blank" rel="noopener noreferrer"><i class="fab fa-linkedin"></i></a>
 
         </div>
         <div class="liensutiles">
             <h3 id="shopfooter">Shop</h3>
             <ul>
-                <li><a href="index.html#Femme">Femme</a></li>
-                <li><a href="index.html#Homme">Homme</a></li>
-                <li><a href="index.html#Solde">Soldes</a></li>
+                <li><a href="index.html#Femme" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Femme</a></li>
+                <li><a href="index.html#Homme" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Homme</a></li>
+                <li><a href="index.html#Solde" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Soldes</a></li>
             </ul>
         </div>
         <div class="liensutiles">
