--- a/index3.html
+++ b/index3.html
@@ -17,7 +17,7 @@
         <div class="menu">
             <div class="marque">
                 <p>Amelia collections</p>
-                <a href="index2.html" target="_blank"><img src="images/_logo.png" alt="le logo de la collection"></a>
+                <a href="index.html" target="_blank" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)"><img src="images/_logo.png" alt="le logo de la collection"></a>
             </div>
 
             <div class="recherche">
