--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
             <li><a href="#Femme">Femme</a></li>
             <li><a href="#Homme">Homme</a></li>
             <li><a href="#Solde">Solde</a></li>
-            <li><a href="index2.html#Contact" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)">Contact</a></li>
+            <li><a href="index2.html#Contact" target="_blank" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)">Contact</a></li>
+
+            <li> <a href="index3.html" target="_blank" aria-label="connectez vous" rel="noopener noreferrer" title="fiche contact(nouvelle fenêtre)">Login</a> </li>
         </ul>
-        <button aria-label="connectez vous"> <a href="index3.html" target="_blank" rel="noopener noreferrer"title="fiche contact(nouvelle fenêtre)">Login</a> </button>
     </nav>
     <!-- section produits femmes -->
     <section id="contenair">
@@ -62,7 +63,7 @@
 
                     <figcaption>Nouveau</figcaption>
                     <div class="content animated fadeInLeft">
-                        <div class="button1" id="buttonLeftMid">
+                        <div class="button1 ButtonLeftMid">
                             <a href="#">400 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
                         </div>
                     </div>
@@ -74,7 +75,7 @@
 
                     <figcaption>Jupe noir</figcaption>
                     <div class="content animated fadeInLeft">
-                        <div class="button1" id="buttonLeftMid">
+                        <div class="button1 ButtonLeftMid">
                             <a href="#">140 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
                         </div>
                     </div>
@@ -94,7 +95,7 @@
 
                     <figcaption>Comfy collection</figcaption>
                     <div class="content animated fadeInLeft">
-                        <div class="button1" id="buttonRightMid">
+                        <div class="button1 ButtonRightMid">
                             <a href="#">450 €</a><a class="cart-btn" href="#"><i class="cart-icon ion-bag"></i>Ajouter au panier</a>
                         </div>
                     </div>
@@ -219,7 +220,7 @@
 
                 </div>
                 <div class="liensutiles">
-                    <h3 id="shopfooter">Shop</h3>
+                    <h3>Shop</h3>
                     <ul>
                         <li><a href="index.html#Femme">Femme</a></li>
                         <li><a href="index.html#Homme">Homme</a></li>
@@ -227,7 +228,7 @@
                     </ul>
                 </div>
                 <div class="liensutiles">
-                    <h3 id="shopfooter">Service client</h3>
+                    <h3>Service client</h3>
                     <ul>
                         <li><a href="#">FAQ</a></li>
                         <li><a href="#">Retours</a></li>
@@ -235,7 +236,7 @@
                     </ul>
                 </div>
                 <div class="liensutiles">
-                    <h3 id="liensutilesfooter">Liens utiles</h3>
+                    <h3>Liens utiles</h3>
                     <ul>
                         <li><a href="index2.html#equipe" target=" _blank" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)">L'équipe</a></li>
                         <li><a href="index2.html#entreprise" target=" _blank" rel="noopener noreferrer" title="informations de l'entreprise (nouvelle fenêtre)">L'entreprise</a></li>
