--- a/index2.html
+++ b/index2.html
@@ -33,8 +33,10 @@
             <li><a href="index.html#Homme" target=" _blank" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Homme</a></li>
             <li><a href="index.html#Solde" target=" _blank" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Solde</a></li>
             <li><a href="index.html#Contact" target=" _blank" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Contact</a></li>
+            <li> <a href="index3.html" target="_blank" aria-label="connectez vous" rel="noopener noreferrer" title="fiche contact(nouvelle fenêtre)">Login</a> </li>
+
         </ul>
-        <button aria-label="connectez vous"> <a href="index3.html" target="_blank"rel="noopener noreferrer"title="page d'inscription (nouvelle fenêtre)">Login</a> </button>
+
 
     </nav>
 
@@ -64,7 +66,7 @@
         <h1>Présentation de l'équipe</h1>
 
         <div class="fil-discrbption">
-            <img id="photo" src="images/imagefilmon.jpg" alt=" photo filmon seare ">
+            <img class="photo" src="images/imagefilmon.jpg" alt=" photo filmon seare ">
             <div class="discription">
                 <h3 class="presentations">Fondateur & CEO</h3>
                 <h4>Filmon Seare</h4>
@@ -74,7 +76,7 @@
             </div>
         </div>
         <div class="antoin-dicription">
-            <img id="photo" src="images/photoantoine.png" alt=" that photo">
+            <img class="photo" src="images/photoantoine.png" alt=" that photo">
             <div class="discription">
                 <h3 class="presentations">Responsable des Grands comptes</h3>
                 <h4>Antoine Gayoso</h4>
@@ -82,7 +84,7 @@
             </div>
         </div>
         <div class="samira-disription">
-            <img id="photo" src="femmes/samira.png" alt=" that photo">
+            <img class="photo" src="femmes/samira.png" alt=" that photo">
             <div class="discription">
                 <h3 class="presentation"> Styliste </h3>
                 <h4>Samira Houacine</h4>
@@ -133,7 +135,7 @@
 
         </div>
         <div class="liensutiles">
-            <h3 id="shopfooter">Shop</h3>
+            <h3>Shop</h3>
             <ul>
                 <li><a href="index.html#Femme" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Femme</a></li>
                 <li><a href="index.html#Homme" rel="noopener noreferrer" title="revenir vers la page principale (nouvelle fenêtre)">Homme</a></li>
@@ -141,7 +143,7 @@
             </ul>
         </div>
         <div class="liensutiles">
-            <h3 id="shopfooter">Service client</h3>
+            <h3>Service client</h3>
             <ul>
                 <li><a href="#">FAQ</a></li>
                 <li><a href="#">Retours</a></li>
@@ -149,7 +151,7 @@
             </ul>
         </div>
         <div class="liensutiles">
-            <h3 id="liensutilesfooter">Liens utiles</h3>
+            <h3>Liens utiles</h3>
             <ul>
                 <li><a href="#equipe">L'équipe</a></li>
                 <li><a href="#entreprise">L'entreprise</a></li>
