--- a/index3.html
+++ b/index3.html
@@ -34,23 +34,22 @@
 
             <hr>
             <div class="motdepasse">
-                <a href="#">Se souvenir de moi</a> <br>
+                <a href="#">Se souvenir de moi</a><br>
 
                 <a href="#">Mot de passe oublié? </a> <br>
                 <a href="#">Active mon compte </a>
 
             </div>
-            <div id="suivant"></div>
-            <button class="para" aria-label="suivant" aria-describedby="suivant"> <a href="#">Suivant</a></button>
+
+            <a href="#" class="para" aria-label="suivant" aria-describedby="suivant">Suivant</a>
             <h2>CREÉR UN COMPTE</h2>
             <ul>
                 <li>Passer vos commandes plus rapidement</li>
                 <li>Renoyez les details de vos commandes</li>
 
             </ul>
-            <div id="creer un compte"> </div>
-            <button class="para" aria-label="creer un compte" aria-describedby="creer un compte"> 
-                <a href="#">Créer un compte</a></button>
+
+            <a href="#" class="para" aria-label="creer un compte" aria-describedby="creer un compte">Créer un compte</a>
 
         </div>
     </main>
